--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,45 +1,29 @@
 spring:
   profiles:
     active:
-    - dev
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+      -dev
+  # Database
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://192.168.99.100:5432/eu
+    username: postgres
+    password: 123456
   jpa:
     properties:
-      javax:
-        persistence:
-          validation:
-            mode: none
-  data:
-    web:
-      pageable:
-        default-page-size: 10
-        max-page-size: 100
----
-spring:
-  profiles: prod
-  datasource:
-    url: jdbc:h2:./favorite-prod
-  jpa:
+      hibernate:
+        default_schema: favorite
+        temp:
+          use_jdbc_metadata_defaults: false
+        jdbc:
+          lob:
+            non_contextual_creation: true
     hibernate:
-      ddl-auto: update
-  h2:
-    console:
-      enabled: false
-favorite:
-  upload-path: uploads-prod
----
-spring:
-  profiles: dev
-  datasource:
-    url: jdbc:h2:mem:favorite-dev
-favorite:
-  upload-path: uploads-dev
----
-spring:
-  profiles: test
-favorite:
-  upload-path: uploads-test
-  
+      ddl-auto: update # When you launch the application for the first time - switch "none" at "create"
+    show-sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    open-in-view: false
+    generate-ddl: true
+
+
+
